Fix spacing of field containers

--- a/src/ui/settings/container.scss
+++ b/src/ui/settings/container.scss
@@ -5,7 +5,7 @@
     gap: 0;
 
     > .title {
-        padding: 10px;
+        padding: 10px 0;
         font-size: 1.2em;
         font-weight: bold;
     }
